Bootstrap4XPages Plugin

--- a/L8669/plugin.xml
+++ b/L8669/plugin.xml
@@ -19,9 +19,9 @@
     <import optional="true" plugin="com.ibm.notes.java.api"/>
     <import optional="true" plugin="com.ibm.xsp.rcp"/>
     <import optional="true" plugin="com.ibm.xsp.extlib"/>
-    <import optional="true" plugin="com.jquery"/>
     <import optional="true" plugin="org.openntf.domino.xsp"/>
     <import optional="true" plugin="org.openntf.xsp.debugtoolbar"/>
+    <import optional="true" plugin="org.openntf.xsp.bootstrap"/>
     <!--AUTOGEN-END-BUILDER: End of automatically generated section-->
   </requires>
 </plugin>
