--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
  replicaid='83258203004F19D9' path='CN=ADA3D/O=SASA!!ACTIVAS\L8669.nsf' title='L8669'
- allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
+ fromtemplate='20180227' allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='83258203004F19D9' odsversion='43' diskspace='8912896'
- percentused='95.9644990808824' numberofdocuments='4'><datamodified><datetime
- dst='true'>20171228T092045,93-02</datetime></datamodified><designmodified
-><datetime dst='true'>20171228T111123,01-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='83258203004F19D9' odsversion='43' diskspace='22544384'
+ percentused='52.1563862645349' numberofdocuments='6'><datamodified><datetime
+ dst='true'>20180226T181046,81-02</datetime></datamodified><designmodified
+><datetime dst='true'>20180227T111324,70-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -52,11 +52,11 @@
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='370'>
+<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='388'>
 <created><datetime dst='true'>19871019T165057,55-04</datetime></created>
-<modified><datetime dst='true'>20171227T150339,51-02</datetime></modified>
-<revised><datetime dst='true'>20171227T150339,50-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171227T150339,51-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20180227T111013,37-02</datetime></modified>
+<revised><datetime dst='true'>20180227T111013,36-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20180227T111013,37-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20171227T122359,89-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
 >CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
@@ -81,13 +81,13 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA==
 <item name='$LaunchXPageRunOnServer'><text>0</text></item>
 <item name='$FlagsNoRefresh'><text/></item>
 <item name='$TemplateServerName'><text>CN=Notes Standard Control/O=SASA</text></item>
-<item name='$TemplateFileName'><text>CN=ADA3D/O=SASA!!L0000.ntf</text></item>
-<item name='$PIRCRefreshModTime'><datetime>20171227T135729,45-03</datetime></item>
-<item name='$TemplateModTime'><datetime dst='true'>20171227T145717,10-02</datetime></item>
 <item name='$Daos'><text>0</text></item>
 <item name='$LargeSummary'><text>0</text></item>
 <item name='$Flags'><text>fJz247qZFn!</text></item>
 <item name='$TITLE'><text>L8669
-</text></item></note>
+#220180227</text></item>
+<item name='$PIRCRefreshModTime'><datetime>20180227T101011,48-03</datetime></item>
+<item name='$TemplateModTime'><datetime>20180227T100825,88-03</datetime></item>
+<item name='$TemplateFileName'><text>c:\Program Files (x86)\IBM\Notes\Data\L8669_20180227.ntf</text></item></note>
 </database>
 
