Error al cargar el modulo dojo del servidor. Puede que sea por estos archivos Se vuelve a una version anterior

--- a/L8669/WebContent/WEB-INF/xsp.properties
+++ b/L8669/WebContent/WEB-INF/xsp.properties
@@ -5,12 +5,11 @@ xsp.application.timeout=32
 xsp.client.script.radioCheckbox.ie.onchange.trigger=early-onclick
 xsp.client.validation=false
 xsp.error.page=debugToolbarErrorPage.xsp
+xsp.error.page.default=true
 xsp.html.doctype=html
-xsp.library.depends=com.ibm.xsp.extlib.library,org.openntf.domino.xsp.XspLibrary,org.openntf.xsp.debugtoolbar.library,org.openntf.xsp.bootstrap.library
+xsp.library.depends=com.ibm.xsp.extlib.library,com.jquery.library,org.openntf.domino.xsp.XspLibrary,org.openntf.xsp.debugtoolbar.library
 xsp.min.version=9.0.1
 xsp.persistence.mode=basic
 xsp.resources.aggregate=true
 xsp.session.timeout=32
 xsp.theme=bootstrap4xpages.theme
-xsp.client.resources.uncompressed=true
-xsp.error.page.default=true
