Hoja de estilo para las dataTables

--- a/L8669/.settings/org.eclipse.core.resources.prefs
+++ b/L8669/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Thu Dec 14 16:20:21 ART 2017
+#Thu Mar 01 17:33:30 ART 2018
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/a2_docs.min.css=UTF-8
 encoding//Resources/StyleSheets/bootstrap-extended.css=UTF-8
@@ -7,3 +7,4 @@ encoding//Resources/StyleSheets/bootstrapSubmenu.css=UTF-8
 encoding//Resources/StyleSheets/buttonSwitch.css=UTF-8
 encoding//Resources/StyleSheets/home_Main.min.css=UTF-8
 encoding//Resources/StyleSheets/sinUso_2fawesome-bootstrap-checkbox.css=UTF-8
+encoding//Resources/StyleSheets/xpDataTable.css=UTF-8
