--- a/L8669/.settings/org.eclipse.core.resources.prefs
+++ b/L8669/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Thu Mar 01 17:33:30 ART 2018
+#Fri Mar 16 15:22:23 ART 2018
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/a2_docs.min.css=UTF-8
+encoding//Resources/StyleSheets/affixPlaceBar.css=UTF-8
 encoding//Resources/StyleSheets/bootstrap-extended.css=UTF-8
 encoding//Resources/StyleSheets/bootstrap-toggle.min.css=UTF-8
 encoding//Resources/StyleSheets/bootstrapSubmenu.css=UTF-8
