--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -5,9 +5,9 @@
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
 <databaseinfo dbid='83258203004F19D9' odsversion='43' diskspace='22544384'
- percentused='52.1620639534884' numberofdocuments='6'><datamodified><datetime
- dst='true'>20180226T181046,81-02</datetime></datamodified><designmodified
-><datetime dst='true'>20180227T115918,93-02</datetime></designmodified></databaseinfo>
+ percentused='40.636355377907' numberofdocuments='6'><datamodified><datetime
+ dst='true'>20180307T162329,00-02</datetime></datamodified><designmodified
+><datetime dst='true'>20180320T170110,60-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -27,8 +27,10 @@
 <role>[usrInitial]</role></aclentry>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'>
-<role>[Desarrollo]</role></aclentry>
+ createlsjavaagents='false'/>
+<logentry>19/03/2018 03:47:02 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>19/03/2018 12:46:28 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>19/03/2018 10:44:20 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>27/12/2017 01:14:40 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>12/27/2017 11:52:28 AM 866911860269 updated 866911860269</logentry>
 <logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated 8669</logentry>
@@ -45,9 +47,7 @@
 <logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated -Default-</logentry>
 <logentry>12/27/2017 11:24:00 AM ADA3D/SASA added ADA3D/SASA</logentry>
 <logentry>12/27/2017 11:24:00 AM ADA3D/SASA updated role [usrInitial]</logentry>
-<logentry>12/27/2017 11:24:00 AM ADA3D/SASA updated role [Desarrollo]</logentry>
-<logentry>12/27/2017 11:24:00 AM ADA3D/SASA added Notes Standard Control/SASA</logentry>
-<logentry>12/27/2017 11:24:00 AM ADA3D/SASA updated -Default-</logentry></acl>
+<logentry>12/27/2017 11:24:00 AM ADA3D/SASA updated role [Desarrollo]</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
