--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -5,9 +5,9 @@
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
 <databaseinfo dbid='83258203004F19D9' odsversion='43' diskspace='22544384'
- percentused='40.636355377907' numberofdocuments='6'><datamodified><datetime
+ percentused='40.7839752906977' numberofdocuments='6'><datamodified><datetime
  dst='true'>20180307T162329,00-02</datetime></datamodified><designmodified
-><datetime dst='true'>20180320T170110,60-02</datetime></designmodified></databaseinfo>
+><datetime dst='true'>20180323T124830,56-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -27,7 +27,11 @@
 <role>[usrInitial]</role></aclentry>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'/>
+ createlsjavaagents='false'>
+<role>[Desarrollo]</role></aclentry>
+<logentry>23/03/2018 11:43:06 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>22/03/2018 03:15:03 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>22/03/2018 11:57:36 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>19/03/2018 03:47:02 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>19/03/2018 12:46:28 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>19/03/2018 10:44:20 AM Notes Standard Control/SASA updated 8669</logentry>
@@ -44,10 +48,7 @@
 <logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added 866911860269</logentry>
 <logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added 8669</logentry>
 <logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added Anonymous</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated -Default-</logentry>
-<logentry>12/27/2017 11:24:00 AM ADA3D/SASA added ADA3D/SASA</logentry>
-<logentry>12/27/2017 11:24:00 AM ADA3D/SASA updated role [usrInitial]</logentry>
-<logentry>12/27/2017 11:24:00 AM ADA3D/SASA updated role [Desarrollo]</logentry></acl>
+<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated -Default-</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
