--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
- replicaid='83258203004F19D9' path='CN=ADA3D/O=SASA!!ACTIVAS\L8669.nsf' title='L8669'
+ replicaid='83258294005DFE4F' path='CN=ADA3D/O=SASA!!ACTIVAS\L8669.nsf' title='L8669'
  allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='83258203004F19D9' odsversion='43' diskspace='22544384'
- percentused='40.7839752906977' numberofdocuments='6'><datamodified><datetime
- dst='true'>20180307T162329,00-02</datetime></datamodified><designmodified
-><datetime dst='true'>20180323T124830,56-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='9175040'
+ percentused='95.8426339285714' numberofdocuments='3'><datamodified><datetime
+ dst='true'>20180521T161304,11-02</datetime></datamodified><designmodified
+><datetime dst='true'>20180521T161313,18-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -22,44 +22,44 @@
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
-<aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='false'
- writepublicdocs='false'>
+<aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='true'
+ writepublicdocs='true'>
+<role>[Desarrollo]</role>
 <role>[usrInitial]</role></aclentry>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'>
-<role>[Desarrollo]</role></aclentry>
-<logentry>23/03/2018 11:43:06 AM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>22/03/2018 03:15:03 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>22/03/2018 11:57:36 AM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>19/03/2018 03:47:02 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>19/03/2018 12:46:28 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>19/03/2018 10:44:20 AM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>27/12/2017 01:14:40 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>12/27/2017 11:52:28 AM 866911860269 updated 866911860269</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated 866911860269</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated LocalDomainServers</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated LocalDomainAdmins</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated Anonymous</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added OtherDomainServers</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added LocalDomainServers</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added 866911860269</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added 8669</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA added Anonymous</logentry>
-<logentry>12/27/2017 11:24:00 AM Notes Standard Control/SASA updated -Default-</logentry></acl>
+ createlsjavaagents='false'/>
+<logentry>05/21/2018 04:13:13 PM 866911860269 updated 866911860269</logentry>
+<logentry>21/05/2018 03:16:38 PM Notes Standard Control/SASA updated 866911860269</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated 866911860269</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated LocalDomainServers</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated LocalDomainAdmins</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated Anonymous</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added OtherDomainServers</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added LocalDomainServers</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 866911860269</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 8669</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added Anonymous</logentry>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated -Default-</logentry>
+<logentry>05/21/2018 03:06:40 PM ADA3D/SASA added ADA3D/SASA</logentry>
+<logentry>05/21/2018 03:06:40 PM ADA3D/SASA updated role [usrInitial]</logentry>
+<logentry>05/21/2018 03:06:40 PM ADA3D/SASA updated role [Desarrollo]</logentry>
+<logentry>05/21/2018 03:06:40 PM ADA3D/SASA added Notes Standard Control/SASA</logentry>
+<logentry>05/21/2018 03:06:40 PM ADA3D/SASA updated -Default-</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='389'>
+<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='392'>
 <created><datetime dst='true'>19871019T165057,55-04</datetime></created>
-<modified><datetime dst='true'>20180227T112044,43-02</datetime></modified>
-<revised><datetime dst='true'>20180227T112044,42-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20180227T112044,43-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20171227T122359,89-02</datetime></addedtofile></noteinfo>
+<modified><datetime dst='true'>20180521T150644,54-02</datetime></modified>
+<revised><datetime dst='true'>20180521T150644,53-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20180521T150644,54-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20180521T150639,82-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
+>CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
 >CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
 >CN=Notes Standard Control/O=SASA</name></updatedby>
 <item name='IconBitmap' summary='true'>
@@ -82,13 +82,12 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA==
 <item name='$LaunchXPageRunOnServer'><text>0</text></item>
 <item name='$FlagsNoRefresh'><text/></item>
 <item name='$TemplateServerName'><text>CN=Notes Standard Control/O=SASA</text></item>
-<item name='$Daos'><text>0</text></item>
 <item name='$LargeSummary'><text>0</text></item>
 <item name='$Flags'><text>fJz247qZFn!</text></item>
 <item name='$PIRCRefreshModTime'><datetime>20180227T101011,48-03</datetime></item>
 <item name='$TemplateModTime'><datetime>20180227T100825,88-03</datetime></item>
 <item name='$TemplateFileName'><text>c:\Program Files (x86)\IBM\Notes\Data\L8669_20180227.ntf</text></item>
-<item name='$TITLE'><text>L8669
-</text></item></note>
+<item name='$Daos'><text>0</text></item>
+<item name='$TITLE'><text>L8669</text></item></note>
 </database>
 
