La funcion setLog pasa al lockeo

--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -4,10 +4,10 @@
  allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='9175040'
- percentused='95.8426339285714' numberofdocuments='3'><datamodified><datetime
+<databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='9699328'
+ percentused='93.6391469594595' numberofdocuments='3'><datamodified><datetime
  dst='true'>20180521T161304,11-02</datetime></datamodified><designmodified
-><datetime dst='true'>20180521T161313,18-02</datetime></designmodified></databaseinfo>
+><datetime dst='true'>20180608T170445,88-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -29,6 +29,12 @@
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
  createlsjavaagents='false'/>
+<logentry>06/06/2018 11:23:17 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>05/06/2018 03:46:00 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>05/06/2018 08:37:39 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>05/06/2018 08:19:06 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>04/06/2018 04:18:46 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>04/06/2018 03:49:38 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>05/21/2018 04:13:13 PM 866911860269 updated 866911860269</logentry>
 <logentry>21/05/2018 03:16:38 PM Notes Standard Control/SASA updated 866911860269</logentry>
 <logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated 8669</logentry>
@@ -42,12 +48,7 @@
 <logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 866911860269</logentry>
 <logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 8669</logentry>
 <logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added Anonymous</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated -Default-</logentry>
-<logentry>05/21/2018 03:06:40 PM ADA3D/SASA added ADA3D/SASA</logentry>
-<logentry>05/21/2018 03:06:40 PM ADA3D/SASA updated role [usrInitial]</logentry>
-<logentry>05/21/2018 03:06:40 PM ADA3D/SASA updated role [Desarrollo]</logentry>
-<logentry>05/21/2018 03:06:40 PM ADA3D/SASA added Notes Standard Control/SASA</logentry>
-<logentry>05/21/2018 03:06:40 PM ADA3D/SASA updated -Default-</logentry></acl>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated -Default-</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
