Sin blancos al final

--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -5,9 +5,9 @@
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
 <databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='9699328'
- percentused='93.6391469594595' numberofdocuments='3'><datamodified><datetime
- dst='true'>20180521T161304,11-02</datetime></datamodified><designmodified
-><datetime dst='true'>20180608T170445,88-02</datetime></designmodified></databaseinfo>
+ percentused='94.6737753378378' numberofdocuments='63'><datamodified><datetime
+ dst='true'>20180618T151839,48-02</datetime></datamodified><designmodified
+><datetime dst='true'>20180618T170605,52-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -24,11 +24,13 @@
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
 <aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='true'
  writepublicdocs='true'>
-<role>[Desarrollo]</role>
 <role>[usrInitial]</role></aclentry>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
  createlsjavaagents='false'/>
+<logentry>18/06/2018 11:24:31 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>18/06/2018 11:16:36 AM Notes Standard Control/SASA updated 866911860269</logentry>
+<logentry>18/06/2018 11:16:34 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>06/06/2018 11:23:17 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>05/06/2018 03:46:00 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>05/06/2018 08:37:39 AM Notes Standard Control/SASA updated 8669</logentry>
@@ -45,10 +47,7 @@
 <logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added OtherDomainServers</logentry>
 <logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
 <logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added LocalDomainServers</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 866911860269</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 8669</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added Anonymous</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated -Default-</logentry></acl>
+<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 866911860269</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
