Opciones de gastos Drag & Drop orden de los gastos

--- a/L8669/.settings/org.eclipse.core.resources.prefs
+++ b/L8669/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Mon Mar 26 15:26:10 ART 2018
+#Wed Jun 27 12:17:58 ART 2018
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/a2_docs.min.css=UTF-8
 encoding//Resources/StyleSheets/affixTitleBar_3.css=UTF-8
@@ -8,6 +8,7 @@ encoding//Resources/StyleSheets/bootstrap-extended.css=UTF-8
 encoding//Resources/StyleSheets/bootstrap-toggle.min.css=UTF-8
 encoding//Resources/StyleSheets/bootstrapSubmenu.css=UTF-8
 encoding//Resources/StyleSheets/buttonSwitch.css=UTF-8
+encoding//Resources/StyleSheets/dragAndDrop.css=UTF-8
 encoding//Resources/StyleSheets/home_Main.min.css=UTF-8
 encoding//Resources/StyleSheets/sinUso_2fawesome-bootstrap-checkbox.css=UTF-8
 encoding//Resources/StyleSheets/xpDataTable.css=UTF-8
