--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -4,10 +4,10 @@
  allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='9699328'
- percentused='94.6737753378378' numberofdocuments='63'><datamodified><datetime
- dst='true'>20180618T151839,48-02</datetime></datamodified><designmodified
-><datetime dst='true'>20180618T170605,52-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='9961472'
+ percentused='95.0580797697369' numberofdocuments='95'><datamodified><datetime
+ dst='true'>20180703T184735,30-02</datetime></datamodified><designmodified
+><datetime dst='true'>20180726T144653,31-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -27,7 +27,17 @@
 <role>[usrInitial]</role></aclentry>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'/>
+ createlsjavaagents='false'>
+<role>[Desarrollo]</role></aclentry>
+<logentry>25/07/2018 06:20:11 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>04/07/2018 11:25:05 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>04/07/2018 10:42:23 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>03/07/2018 07:20:50 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>03/07/2018 07:05:23 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>28/06/2018 12:42:07 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>28/06/2018 11:36:21 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>21/06/2018 01:19:46 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>21/06/2018 01:19:12 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>18/06/2018 11:24:31 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>18/06/2018 11:16:36 AM Notes Standard Control/SASA updated 866911860269</logentry>
 <logentry>18/06/2018 11:16:34 AM Notes Standard Control/SASA updated 8669</logentry>
@@ -38,16 +48,7 @@
 <logentry>04/06/2018 04:18:46 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>04/06/2018 03:49:38 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>05/21/2018 04:13:13 PM 866911860269 updated 866911860269</logentry>
-<logentry>21/05/2018 03:16:38 PM Notes Standard Control/SASA updated 866911860269</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated 866911860269</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated LocalDomainServers</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated LocalDomainAdmins</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA updated Anonymous</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added OtherDomainServers</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added LocalDomainServers</logentry>
-<logentry>05/21/2018 03:06:41 PM Notes Standard Control/SASA added 866911860269</logentry></acl>
+<logentry>21/05/2018 03:16:38 PM Notes Standard Control/SASA updated 866911860269</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
