Combo de edificios con lista de edificios que no debe mostrar

--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -4,10 +4,10 @@
  allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='18612224'
- percentused='55.3986025528169' numberofdocuments='299'><datamodified><datetime
- dst='true'>20180808T111226,83-02</datetime></datamodified><designmodified
-><datetime dst='true'>20180808T103051,59-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='83258294005DFE4F' odsversion='43' diskspace='35651584'
+ percentused='34.3505859375' numberofdocuments='408'><datamodified><datetime
+ dst='true'>20180910T123534,73-02</datetime></datamodified><designmodified
+><datetime dst='true'>20180911T020101,06-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -24,10 +24,16 @@
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'/>
+ createlsjavaagents='false'>
+<role>[Desarrollo]</role></aclentry>
 <aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='true'
  writepublicdocs='true'>
 <role>[usrInitial]</role></aclentry>
+<logentry>10/09/2018 07:37:22 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/09/2018 04:02:25 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/09/2018 03:16:25 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/09/2018 12:39:09 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/09/2018 11:31:21 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>07/08/2018 03:30:54 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA updated ADA3D/SASA</logentry>
 <logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA added 8669</logentry>
@@ -41,11 +47,6 @@
 <logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA updated -Default-</logentry>
 <logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA updated role [usrInitial]</logentry>
 <logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA updated role [Desarrollo]</logentry>
-<logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA deleted role </logentry>
-<logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA deleted role </logentry>
-<logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA deleted role </logentry>
-<logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA deleted role </logentry>
-<logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA deleted role </logentry>
 <logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA deleted role </logentry>
 <logentry>07/08/2018 03:20:56 PM Notes Standard Control/SASA deleted role </logentry></acl>
 
