Formulario y vista de pregrabado

--- a/L8669/.settings/org.eclipse.core.resources.prefs
+++ b/L8669/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Wed Sep 05 11:52:55 ART 2018
+#Tue Sep 25 17:42:57 ART 2018
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/a2_docs.min.css=UTF-8
 encoding//Resources/StyleSheets/affixTitleBar_3.css=UTF-8
@@ -12,4 +12,5 @@ encoding//Resources/StyleSheets/dragAndDrop.css=UTF-8
 encoding//Resources/StyleSheets/dragAndDrop_bkp20180904.css=UTF-8
 encoding//Resources/StyleSheets/home_Main.min.css=UTF-8
 encoding//Resources/StyleSheets/sinUso_2fawesome-bootstrap-checkbox.css=UTF-8
+encoding//Resources/StyleSheets/wizard\ Pregrabados.css=UTF-8
 encoding//Resources/StyleSheets/xpDataTable.css=UTF-8
